--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <script src="js/aframe.min.js"></script>
     <script src="js/aframe-look-at-component.min.js"></script>
     <script src="js/ava.js"></script>
-        <link href="css/style.css" rel="stylesheet">
+    <script src="js/ava-environment.js"></script>
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <a-scene id="avascene">
+    <a-scene id="avascene" ava-environment>
         <a-assets>
             <img id="bg" src="imgs/bg.jpg">
             <img id="alder" src="imgs/alder.png">
