--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
             <img id="pine" src="imgs/pine.png">
             <img id="meadowsweet" src="imgs/meadowsweet.png">
             <img id="bracken" src="imgs/bracken.png">
-            <img id="ground" src="imgs/floor.jpg">
+            <img id="ground" src="imgs/floor2.jpg">
             <audio id="ambient" src="audio/ambient.mp3" preload="auto" loop="true"></audio>
         </a-assets>
         <a-entity id="cam" camera look-controls wasd-controls position="0 1.8 0">
             <a-entity cursor position="0 0 -1" geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.03" material="color: black; shader: flat"></a-entity>
         </a-entity>
         <a-sky src="#bg"></a-sky>
-        <a-plane src="#ground" height="150" width="150" position="0 -0.1 0" rotation="-90 0 0"></a-plane>
+        <a-plane src="#ground" height="80" width="80" position="0 0 0" rotation="-90 0 0"></a-plane>
     </a-scene>
     </body>
 
