--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <img id="meadowsweet" src="imgs/meadowsweet.png">
             <img id="bracken" src="imgs/bracken.png">
             <img id="ground" src="imgs/floor2.jpg">
+            <img id="cloud0" src="imgs/cloud0.png">
+            <img id="cloud1" src="imgs/cloud1.png">
             <audio id="ambient" src="audio/ambient.mp3" preload="auto" loop="true"></audio>
         </a-assets>
         <a-entity id="cam" camera look-controls wasd-controls position="0 1.8 0">
