change floor plane color

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </a-entity>
         <a-sky src="#bg"></a-sky>
         <a-plane src="#ground" height="40" width="40" position="0 0 0" rotation="-90 0 0"></a-plane>
-        <a-plane color="#6D7931" height="150" width="150" position="0 -0.01 0" rotation="-90 0 0"></a-plane>
+        <a-plane color="#6C792F" height="150" width="150" position="0 -0.01 0" rotation="-90 0 0"></a-plane>
         <a-entity laser-controls="hand: left"></a-entity>
     </a-scene>
     </body>
