--- a/index.html
+++ b/index.html
@@ -33,7 +33,77 @@
         <a-sky src="#bg"></a-sky>
         <a-plane src="#ground" height="40" width="40" position="0 0 0" rotation="-90 0 0"></a-plane>
         <a-plane color="#6C792F" height="150" width="150" position="0 -0.01 0" rotation="-90 0 0"></a-plane>
-        <a-entity laser-controls="hand: left"></a-entity>
+        <!-- <a-entity laser-controls="hand: left"></a-entity> -->
+
+        <!--HOUSE STRUCTURE-->
+        <a-entity position="-4.847 3.105 -5.214" rotation="-82.964 115.508 -84.626" geometry="primitive:cylinder;height:4;radius:0.16" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-5.889 3.663 -6.111" rotation="31.513 10.084 -115.967" geometry="radius:0.14;height:2;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-4.753 3.663 -3.708" rotation="31.513 10.094 -115.947" geometry="radius:0.14;height:2;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-7.482 3.623 -5.368" rotation="34.664 40.852 -62.682" geometry="radius:0.14;height:2;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-6.326 3.683 -2.963" rotation="34.664 40.852 -62.682" geometry="radius:0.14;height:2;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-6.71 4.209 -5.687" rotation="-82.954 110.409 -84.626" geometry="height:6.5;radius:0.1;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-7.485 3.125 -3.84" rotation="-82.964 110.409 -84.626" geometry="radius:0.16;height:4;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-13.253 4.097 -8.695" rotation="-68.52575229764645 -36 0" geometry="height:7;radius:0.1;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-12.522 4.097 -7.939" rotation="-68.52575229764645 -18 0" geometry="height:7;radius:0.1;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-13.808 4.097 -9.552" rotation="-68.526 -54 0" geometry="height:7;radius:0.1;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-14.071 4.097 -10.557" rotation="-68.52575229764645 -72 0" geometry="height:7;radius:0.1;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-13.974 4.097 -11.58" rotation="-68.526 -90 0" geometry="height:7;radius:0.1;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-13.555 4.097 -12.541" rotation="-68.526 -108 0" geometry="height:7;radius:0.1;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-12.862 4.097 -13.334" rotation="-68.526 -126 0" geometry="height:7;radius:0.1;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-11.978 4.097 -13.865" rotation="-68.526 -144 0" geometry="height:7;radius:0.1;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-10.94 4.097 -14.045" rotation="-68.526 198 0" geometry="height:7;radius:0.1;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-9.867 4.097 -13.931" rotation="-68.526 180 0" geometry="height:7;radius:0.1;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-8.879 4.097 -13.545" rotation="-68.526 162 0" geometry="height:7;radius:0.1;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-8.155 4.097 -12.853" rotation="-68.566 144 0" geometry="height:7;radius:0.1;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-7.65 4.097 -11.975" rotation="-68.526 126 0" geometry="height:7;radius:0.1;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-7.418 4.097 -10.964" rotation="-68.526 108 0" geometry="height:7;radius:0.1;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-7.442 4.096 -9.947" rotation="-68.526 90 0" geometry="height:7;radius:0.1;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-7.878 4.087 -9.009" rotation="-68.526 72 0" geometry="primitive:cylinder;height:7;radius:0.1" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-8.567 4.097 -8.224" rotation="-68.52575229764645 54 0" geometry="height:7;radius:0.1;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-9.47 4.097 -7.709" rotation="-68.526 36 0" geometry="height:7;radius:0.1;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-10.517 4.097 -7.503" rotation="-68.526 18 0" geometry="height:7;radius:0.1;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-11.535 4.097 -7.558" rotation="-68.52575229764645 0 0" geometry="height:7;radius:0.1;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-4.647 1.51 -4.64" geometry="radius:0.32;height:3;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-7.216 1.51 -3.358" geometry="radius:0.3;height:3;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-6.746 2.986 -5.695" rotation="91 -64.5 0" geometry="primitive:cylinder;height:2.9;radius:0.1" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-14.908 3.028 -13.21" rotation="89.03764136332994 -24.350706293059986 0" geometry="radius:0.22;height:2.7;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-9.844 3.028 -5.695" rotation="89.028 90.144 0" geometry="height:2.4;radius:0.22;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-12.329 3.028 -6.287" rotation="89.038 64.859 0" geometry="height:2.79;radius:0.22;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-14.582 3.028 -9.398" rotation="89.03764136332994 19.48056503444799 0" geometry="primitive:cylinder;height:5.2;radius:0.25" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-11.706 3.038 -15.243" rotation="89.038 -73.281 0" geometry="height:5.2;radius:0.25;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-7.555 3.008 -15.226" rotation="89.038 -118.144 0" geometry="height:3.4;radius:0.22;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-5.543 3.008 -12.582" rotation="89.03764136332994 -164.3242956435201 0" geometry="height:3.6;radius:0.22;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-5.471 3.008 -9.09" rotation="89.038 163.35 0" geometry="radius:0.22;height:3.5;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-7.218 2.965 -6.454" rotation="89.038 119.93 0" geometry="radius:0.25;height:3.2;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-5.966 2.909 -3.996" rotation="89.038 117.227 0" geometry="radius:0.07;height:3.2;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-7.655 1.157 -4.645" rotation="36.268 166.158 -24.006931615981493" geometry="primitive:cylinder;height:4;radius:0.1" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-5.405 1.558 -5.942" rotation="36.268 172.46 -24" geometry="height:4;radius:0.1;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-5.405 1.558 -5.942" rotation="36.268 172.46 -24" geometry="height:4;radius:0.1;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-6.354 3.001 -4.959" rotation="91 -65.5 0" geometry="height:2.9;radius:0.1;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-5.053 1.51 -5.551" geometry="primitive:cylinder;height:3;radius:0.12" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-5.463 1.51 -6.3" geometry="primitive:cylinder;height:3;radius:0.12" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-7.645 1.51 -4.372" geometry="radius:0.12;height:3;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-8.038 1.51 -5.074" geometry="radius:0.1;height:3;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-8.374 1.51 -5.781" geometry="radius:0.37;height:3;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-6.05 1.51 -7.148" geometry="radius:0.4;height:3;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-5.016 1.51 -10.725" geometry="radius:0.27;height:3;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-6.053 1.51 -14.307" geometry="radius:0.28;height:3;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-8.922 1.51 -15.915" geometry="radius:0.4;height:3;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-14.231 1.51 -14.39" geometry="radius:0.34;height:3;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-15.488 1.51 -11.841" geometry="radius:0.355;height:3;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-13.675 1.51 -6.958" geometry="radius:0.35;height:3;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-11.017 1.51 -5.659" geometry="radius:0.3;height:3;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-10.464 4.072 -14.625" rotation="-82.9642887349432 -175.382381089545 -84.6258663408226" geometry="height:1.5;radius:0.1;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-8.102 3.942 -14.093" rotation="-82.9642887349432 144 -84.6258663408226" geometry="height:1.5;radius:0.1;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-6.63 3.87 -11.933" rotation="-82.9642887349432 104.56479761137524 -84.6258663408226" geometry="height:1.5;radius:0.1;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-6.727 3.927 -9.302" rotation="-82.9642887349432 72 -84.6258663408226" geometry="height:1.5;radius:0.1;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-8.413 4.072 -7.376" rotation="-82.9642887349432 35.867157975189535 -84.6258663408226" geometry="primitive:cylinder;height:1.5;radius:0.1" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-10.915 4.072 -7.142" rotation="-82.9642887349432 0.40107045659157625 -84.6258663408226" geometry="primitive:cylinder;height:1.5;radius:0.1" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-12.974 4.182 -8.139" rotation="-82.9642887349432 -35.17960862103254 -84.6258663408226" geometry="primitive:cylinder;height:1.5;radius:0.1" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-14.155 4.146 -9.973" rotation="-82.9642887349432 -71.16135815524825 -84.6258663408226" geometry="primitive:cylinder;height:1.5;radius:0.1" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-14.118 4.072 -12.15" rotation="-82.9642887349432 -109.43493886998723 -84.6258663408226" geometry="primitive:cylinder;height:1.5;radius:0.1" mixin="null" material="color:#5a311f"></a-entity>
+        <a-entity position="-12.635 4.072 -13.819" rotation="-82.9642887349432 -143.98429391637586 -84.6258663408226" geometry="height:1.5;radius:0.1;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+
     </a-scene>
     </body>
 
