--- a/index.html
+++ b/index.html
@@ -103,6 +103,27 @@
         <a-entity position="-14.155 4.146 -9.973" rotation="-82.9642887349432 -71.16135815524825 -84.6258663408226" geometry="primitive:cylinder;height:1.5;radius:0.1" mixin="null" material="color:#5a311f"></a-entity>
         <a-entity position="-14.118 4.072 -12.15" rotation="-82.9642887349432 -109.43493886998723 -84.6258663408226" geometry="primitive:cylinder;height:1.5;radius:0.1" mixin="null" material="color:#5a311f"></a-entity>
         <a-entity position="-12.635 4.072 -13.819" rotation="-82.9642887349432 -143.98429391637586 -84.6258663408226" geometry="height:1.5;radius:0.1;primitive:cylinder" mixin="null" material="color:#5a311f"></a-entity>
+        <!--ENCLOSURE-->
+        <a-entity position="6.699 0.5 -8.972" geometry="radius:0.12;primitive:cylinder" material="color:#4f2b26"></a-entity>																									
+        <a-entity position="4.514 0.538 -8.907" geometry="radius:0.13;height:1.1;primitive:cylinder" material="color:#4f2b26"></a-entity>																									
+        <a-entity position="2.273 0.477 -9.471" geometry="height:0.97;radius:0.135;primitive:cylinder" material="color:#4f2b26"></a-entity>																									
+        <a-entity position="2.273 0.477 -9.462" geometry="primitive:cylinder;height:0.97;radius:0.135" material="color:#4f2b26"></a-entity>																									
+        <a-entity position="0.778 0.59 -10.532" geometry="height:1.2;radius:0.12;primitive:cylinder" material="color:#4f2b26"></a-entity>																									
+        <a-entity position="-0.452 0.607 -13.59" geometry="height:1.25;radius:0.15;primitive:cylinder" material="color:#4f2b26"></a-entity>																									
+        <a-entity position="14.874 0.607 -14.179" geometry="radius:0.11;height:1.25;primitive:cylinder" material="color:#4f2b26"></a-entity>																									
+        <a-entity position="14.562 0.735 -12.128" geometry="radius:0.1;height:1.5;primitive:cylinder" material="color:#4f2b26"></a-entity>																									
+        <a-entity position="13.249 0.538 -10.382" geometry="height:1.1;radius:0.12;primitive:cylinder" material="color:#4f2b26"></a-entity>																									
+        <a-entity position="11.289 0.746 -9.418" geometry="radius:0.1;height:1.5;primitive:cylinder" material="color:#4f2b26"></a-entity>																									
+        <a-entity position="8.877 0.746 -9.197" geometry="radius:0.12;height:1.5;primitive:cylinder" material="color:#4f2b26"></a-entity>																									
+        <a-entity position="-0.221 0.543 -15.711" geometry="height:1.1;radius:0.16;primitive:cylinder" material="color:#4f2b26"></a-entity>																									
+        <a-entity position="0.343 0.678 -17.378" geometry="height:1.4;radius:0.12;primitive:cylinder" material="color:#4f2b26"></a-entity>																									
+        <a-entity position="1.901 0.495 -18.153" geometry="radius:0.12;primitive:cylinder" material="color:#4f2b26"></a-entity>																									
+        <a-entity position="3.683 0.567 -18.333" geometry="height:1.2;radius:0.14;primitive:cylinder" material="color:#4f2b26"></a-entity>																									
+        <a-entity position="5.817 0.489 -18.313" geometry="radius:0.12;primitive:cylinder" material="color:#4f2b26"></a-entity>																									
+        <a-entity position="8.18 0.664 -18.243" geometry="height:1.3;radius:0.12;primitive:cylinder" material="color:#4f2b26"></a-entity>																									
+        <a-entity position="14.611 0.664 -15.797" geometry="primitive:cylinder;height:1.3;radius:0.12" material="color:#4f2b26"></a-entity>																									
+        <a-entity position="10.836 0.511 -17.886" geometry="radius:0.11;height:1.1;primitive:cylinder" material="color:#4f2b26"></a-entity>																									
+        <a-entity position="13.042 0.477 -17.093" geometry="radius:0.1;primitive:cylinder" material="color:#4f2b26"></a-entity>																									
 
     </a-scene>
     </body>
