--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
         <a-entity position="-14.155 4.146 -9.973" rotation="-82.9642887349432 -71.16135815524825 -84.6258663408226" geometry="primitive:cylinder;height:1.5;radius:0.1"  material="src:#wood1"></a-entity>
         <a-entity position="-14.118 4.072 -12.15" rotation="-82.9642887349432 -109.43493886998723 -84.6258663408226" geometry="primitive:cylinder;height:1.5;radius:0.1"  material="src:#wood1"></a-entity>
         <a-entity position="-12.635 4.072 -13.819" rotation="-82.9642887349432 -143.98429391637586 -84.6258663408226" geometry="height:1.5;radius:0.1;primitive:cylinder"  material="src:#wood1"></a-entity>
+        <!--WALLS-->
+        <a-entity id="outerwall" position="-10.244 1.487 -11.097" geometry="radius:5.38;height:3.06;thetaLength:330;openEnded:true;primitive:cylinder" rotation="0 49.9 0" material="color:#00ffff"></a-entity>
+        <a-entity id="innerwall" position="-10.244 1.487 -11.097" geometry="primitive:cylinder;height:3.06;openEnded:true;radius:5.38;thetaLength:330" rotation="0 -164.9 180" material="color:#ff0000" scale="-1 -1 -1"></a-entity>
         <!--ENCLOSURE-->
         <a-entity position="6.699 0.5 -8.972" geometry="radius:0.12;primitive:cylinder" material="src:#wood1"></a-entity>																									
         <a-entity position="4.514 0.538 -8.907" geometry="radius:0.13;height:1.1;primitive:cylinder" material="src:#wood1"></a-entity>																									
@@ -125,9 +128,9 @@
         <a-entity position="0.343 0.678 -17.378" geometry="height:1.4;radius:0.12;primitive:cylinder" material="src:#wood1"></a-entity>																									
         <a-entity position="1.901 0.495 -18.153" geometry="radius:0.12;primitive:cylinder" material="src:#wood1"></a-entity>																									
         <a-entity position="3.683 0.567 -18.333" geometry="height:1.2;radius:0.14;primitive:cylinder" material="src:#wood1"></a-entity>																									
-        <a-entity position="5.817 0.489 -18.313" geometry="radius:0.12;primitive:cylinder" material="src:#wood1"></a-entity>																									
+        <a-entity position="5.817 0.489 -18.313" geometry="radius:0.12;primitive:cylinder" material="src:#wood2"></a-entity>																									
         <a-entity position="8.18 0.664 -18.243" geometry="height:1.3;radius:0.12;primitive:cylinder" material="src:#wood1"></a-entity>																									
-        <a-entity position="14.611 0.664 -15.797" geometry="primitive:cylinder;height:1.3;radius:0.12" material="src:#wood1"></a-entity>																									
+        <a-entity position="14.611 0.664 -15.797" geometry="primitive:cylinder;height:1.3;radius:0.12" material="src:#wood2"></a-entity>																									
         <a-entity position="10.836 0.511 -17.886" geometry="radius:0.11;height:1.1;primitive:cylinder" material="src:#wood1"></a-entity>																									
         <a-entity position="13.042 0.477 -17.093" geometry="radius:0.1;primitive:cylinder" material="src:#wood2"></a-entity>																									
 
