--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="js/aframe.min.js"></script>
     <script src="js/aframe-look-at-component.min.js"></script>
+    <script src="js/aframe-particle-system-component.min.js"></script>
     <script src="js/ava.js"></script>
     <script src="js/ava-environment.js"></script>
     <link href="css/style.css" rel="stylesheet">
@@ -110,6 +111,10 @@
         <a-entity position="-14.155 4.146 -9.973" rotation="-82.9642887349432 -71.16135815524825 -84.6258663408226" geometry="primitive:cylinder;height:1.5;radius:0.1"  material="src:#wood1"></a-entity>
         <a-entity position="-14.118 4.072 -12.15" rotation="-82.9642887349432 -109.43493886998723 -84.6258663408226" geometry="primitive:cylinder;height:1.5;radius:0.1"  material="src:#wood1"></a-entity>
         <a-entity position="-12.635 4.072 -13.819" rotation="-82.9642887349432 -143.98429391637586 -84.6258663408226" geometry="height:1.5;radius:0.1;primitive:cylinder"  material="src:#wood1"></a-entity>
+        <!--ROOF-->
+        <a-entity position="-10.655 4.165 -10.691" id="roof" geometry="height:2.3600000000000003;openEnded:true;radiusBottom:7;radiusTop:0.85;primitive:cone"></a-entity>
+        <!--FIRE-->
+        <a-entity position="-9.875 0 -10.845" id="fire" particle-system=""></a-entity>
         <!--WALLS-->
         <a-entity id="outerwall" position="-10.244 1.487 -11.097" geometry="primitive:cylinder;height:3.06;openEnded:true;radius:5.38;thetaLength:330" rotation="0 49.9 0" material="color:#00ffff"></a-entity>
         <a-entity id="innerwall" position="-10.244 1.487 -11.097" geometry="thetaStart:-1;thetaLength:330;primitive:cylinder;height:3.06;openEnded:true;radius:5.38" rotation="0 -164.9 180" material="color:#ff0000" scale="-1 -1 -1"></a-entity>
