--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <img id="fence" src="imgs/fence.png">
             <img id="wood1" src="imgs/wood1.jpg">
             <img id="wood2" src="imgs/wood2.jpg">
+            <img id="wall1" src="imgs/wall1.jpg">
             <audio id="ambient" src="audio/ambient.mp3" preload="auto" loop="true"></audio>
         </a-assets>
         <a-entity >
@@ -118,8 +119,8 @@
             <!--FIRE-->
             <!-- <a-entity position="-9.68 0 -10.928" id="fire" particle-system="accelerationValue:0.2 0.2 0.2;velocitySpread:0.2 0.2 0.2;velocityValue:0.2 0.2 0.2;accelerationSpread:0.2 0.2 0.2;maxAge:5;type:3;color:#ff0000, #ffff00;particleCount:10;texture:/imgs/cloud0.png;opacity:0.5"></a-entity> -->
             <!--WALLS-->
-            <a-entity id="outerwall" position="-10.244 1.487 -11.097" geometry="primitive:cylinder;height:3.06;openEnded:true;radius:5.38;thetaLength:330" rotation="0 49.9 0" material="color:#00ffff"></a-entity>
-            <a-entity id="innerwall" position="-10.244 1.487 -11.097" geometry="thetaStart:-1;thetaLength:330;primitive:cylinder;height:3.06;openEnded:true;radius:5.38" rotation="0 -164.9 180" material="color:#ff0000" scale="-1 -1 -1"></a-entity>
+            <a-entity id="outerwall" position="-10.244 1.487 -11.097" geometry="primitive:cylinder;height:3.06;openEnded:true;radius:5.38;thetaLength:330" rotation="0 49.9 0" material="src:#wall1;repeat:8,3"></a-entity>
+            <a-entity id="innerwall" position="-10.244 1.487 -11.097" geometry="thetaStart:-1;thetaLength:330;primitive:cylinder;height:3.06;openEnded:true;radius:5.38" rotation="0 -164.9 180" material="src:#wall1;repeat:8,3" scale="-1 -1 -1"></a-entity>
         </a-entity>
         <!--ENCLOSURE-->
         <a-image src="#fence" width="1.5" height="1" position="0.046 0.508 -16.573" rotation="0 70.76028769865667 0"></a-image>
@@ -138,13 +139,16 @@
         <a-image src="#fence" width="1.5" height="1" position="7.788 0.528 -9.018" rotation="0 6.7609019825437136 0" scale="1.4 1 1"></a-image>
         <a-image src="#fence" width="1.5" height="1" position="5.636 0.51 -8.936" rotation="0 1.604281826366305 0" scale="1.4 1 1"></a-image>
         <a-image src="#fence" width="1.5" height="1" position="3.402 0.487 -9.135" rotation="0 -12.547775713365029 0" scale="1.591 1 1"></a-image>
-        
+        <a-image src="#fence" width="1.5" height="1" position="1.456 0.487 -9.975" rotation="0 -37.81521447863433 0" scale="1.2 1 1"></a-image>
+
         <a-entity position="6.699 0.5 -8.972" geometry="radius:0.12;primitive:cylinder" material="src:#wood1"></a-entity>        
         <a-entity position="4.514 0.538 -8.907" geometry="radius:0.13;height:1.1;primitive:cylinder" material="src:#wood1"></a-entity>
         <a-entity position="2.273 0.477 -9.471" geometry="height:0.97;radius:0.135;primitive:cylinder" material="src:#wood2"></a-entity>
         <a-entity position="2.273 0.477 -9.462" geometry="primitive:cylinder;height:0.97;radius:0.135" material="src:#wood2"></a-entity>
+        <a-entity position="0.778 0.59 -10.532" geometry="height:1.2;radius:0.12;primitive:cylinder" material="src:#wood1"></a-entity>
         <a-entity position="-0.452 0.607 -13.59" geometry="height:1.25;radius:0.15;primitive:cylinder" material="src:#wood1"></a-entity>
         <a-entity position="14.562 0.735 -12.128" geometry="radius:0.1;height:1.5;primitive:cylinder" material="src:#wood1"></a-entity>
+        <a-entity position="14.874 0.607 -14.179" geometry="radius:0.11;height:1.25;primitive:cylinder" material="src:#wood1"></a-entity>
         <a-entity position="13.249 0.538 -10.382" geometry="height:1.1;radius:0.12;primitive:cylinder" material="src:#wood1"></a-entity>
         <a-entity position="11.289 0.746 -9.418" geometry="radius:0.1;height:1.5;primitive:cylinder" material="src:#wood1"></a-entity>
         <a-entity position="8.877 0.746 -9.197" geometry="radius:0.12;height:1.5;primitive:cylinder" material="src:#wood2"></a-entity>
