--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
             <a-entity position="-14.118 4.072 -12.15" rotation="-82.9642887349432 -109.43493886998723 -84.6258663408226" geometry="primitive:cylinder;height:1.5;radius:0.1"  material="src:#wood1"></a-entity>
             <a-entity position="-12.635 4.072 -13.819" rotation="-82.9642887349432 -143.98429391637586 -84.6258663408226" geometry="height:1.5;radius:0.1;primitive:cylinder"  material="src:#wood1"></a-entity>
             <!--ROOF-->
-            <a-entity position="-10.655 4.165 -10.691" id="roof" geometry="height:2.3600000000000003;openEnded:true;radiusBottom:7;radiusTop:0.85;primitive:cone"></a-entity>
+            <a-entity position="-10.655 4.165 -10.691" id="roof" geometry="height:2.36;openEnded:true;radiusBottom:7;radiusTop:0.85;primitive:cone" material="src:#wall1;side:double"></a-entity>
             <!--FIRE-->
             <!-- <a-entity position="-9.68 0 -10.928" id="fire" particle-system="accelerationValue:0.2 0.2 0.2;velocitySpread:0.2 0.2 0.2;velocityValue:0.2 0.2 0.2;accelerationSpread:0.2 0.2 0.2;maxAge:5;type:3;color:#ff0000, #ffff00;particleCount:10;texture:/imgs/cloud0.png;opacity:0.5"></a-entity> -->
             <!--WALLS-->
-            <a-entity id="outerwall" position="-10.244 1.487 -11.097" geometry="primitive:cylinder;height:3.06;openEnded:true;radius:5.38;thetaLength:330" rotation="0 49.9 0" material="src:#wall1;repeat:8,3"></a-entity>
-            <a-entity id="innerwall" position="-10.244 1.487 -11.097" geometry="thetaStart:-1;thetaLength:330;primitive:cylinder;height:3.06;openEnded:true;radius:5.38" rotation="0 -164.9 180" material="src:#wall1;repeat:8,3" scale="-1 -1 -1"></a-entity>
+            <a-entity id="outerwall" position="-10.244 1.487 -11.097" geometry="primitive:cylinder;height:3.06;openEnded:true;radius:5.38;thetaLength:330" rotation="0 49.9 0" material="src:#wall1;repeat:4,3"></a-entity>
+            <a-entity id="innerwall" position="-10.244 1.487 -11.097" geometry="thetaStart:-1;thetaLength:330;primitive:cylinder;height:3.06;openEnded:true;radius:5.38" rotation="0 -164.9 180" material="src:#wall1;repeat:4,3" scale="-1 -1 -1"></a-entity>
         </a-entity>
         <!--ENCLOSURE-->
         <a-image src="#fence" width="1.5" height="1" position="0.046 0.508 -16.573" rotation="0 70.76028769865667 0"></a-image>
