adds more plants

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
             <img id="meadowsweet" src="imgs/meadowsweet.png">
             <img id="bracken" src="imgs/bracken.png">
             <img id="ferns" src="imgs/ferns.png">
+            <img id="grasses1" src="imgs/grasses1.png">
+            <img id="grasses2" src="imgs/grasses2.png">
+            <img id="heather" src="imgs/heather.png">
+            <img id="stjohnswort" src="imgs/stjohnswort.png">
             <img id="ground" src="imgs/floor.jpg">
             <img id="cloud0" src="imgs/cloud0.png">
             <img id="cloud1" src="imgs/cloud1.png">
